Get DnD working on mobile.    Probably there are still some rough edges.  Fixes #15185 !strict.
git-svn-id: http://svn.dojotoolkit.org/src/dojo/trunk@28349 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/tests/dnd/dndDefault.css
+++ b/tests/dnd/dndDefault.css
@@ -25,6 +25,10 @@
 
 .dojoDndItem { 
 	padding: 3px;
+
+	/* Prevent magnifying-glass text selection icon to appear on mobile webkit as it causes a touchout event */
+	-webkit-touch-callout: none;
+	-webkit-user-select: none; /* Disable selection/Copy of UIWebView */
 }
 
 .dj_ff2 .dojoDndItem {
